complete Amin Panel

--- a/index.html
+++ b/index.html
@@ -6,10 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <h1>hello</h1>
+    <div class="main_section">
+        <div class="Login_text">
+            <h2 class="login_heading">Login</h2>
+            <form class="login_form">
+                <input type="email" id="login_email" placeholder="Enter Your Email">
+                <input type="password" id="login_password" placeholder="Enter Your password">
+            </form>
+            <button class="signup" id="login_button"><a href="#">Login</a></button>
+
+        </div>
+        <div class="img">
+            <img class="company_img" src="./utils/images/company-concept-illustration_114360-2721.jpg" />
+        </div>
+    </div>
+    <script src="./app.js" type="module"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
 </body>
+
 
 </html>
