--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         </div>
         <div class="img">
-            <img class="company_img" src="./utils/images/company-concept-illustration_114360-2721.jpg" />
+            <img class="company_img" src="https://img.freepik.com/free-vector/organic-flat-customer-support-illustration_23-2148899174.jpg?w=740&t=st=1668258518~exp=1668259118~hmac=f5ea359c0a061692966b5aef6f22e222b061a2b833efdeb53ae21cf3ea81fb56" />
         </div>
     </div>
     <script src="./app.js" type="module"></script>
