--- a/admin.html
+++ b/admin.html
@@ -15,25 +15,20 @@
         <div id="tab1">
             <h2 class="header_heading">Dashboard</h2>
         </div>
-        <!-- <ul>
-            <li><a href="" name="tab1"><i class="fa fa-tachometer"></i>General</a></li>
-            <li><a href="" name="tab2"><i class="fa fa-eyedropper"></i>Styling</a></li>
-            <li><a href="" name="tab3"><i class="fa fa-pencil"></i>Typography</a></li>
-            <li><a href="" name="tab4"><i class="fa fa-picture-o"></i>Portfolio</a></li>
-            <li><a href="" name="tab5"><i class="fa fa-file-video-o"></i>Blog / News</a></li>
-            <li><a href="" name="tab6"><i class="fa fa-wrench"></i>Advanced</a></li>
-        </ul> -->
     </div>
 
     <div class="main">
 
         <div id="tab2">
-            <h2 > <a class="header" href="./dashboard/class details/classdetails.html">class details</a> </h2>
+            <h2 > <a class="header" href="./dashboard/class details/classdetails.html">Class Details</a> </h2>
         </div>
         <div id="tab2">
             <h2 > <a class="header" href="./dashboard/Add student/addstudent.html">Add Student</a></h2>
         </div>
         <div id="tab2">
+            <h2 > <a class="header" href="./dashboard/student details/student.html">Student Details</a></h2>
+        </div>
+        <!-- <div id="tab2">
             <h2 > <a class="header"href="">class details</a> </h2>
         </div>
         <div id="tab2">
@@ -41,7 +36,7 @@
         </div>
         <div id="tab2">
             <h2 > <a class="header"href="">class details</a> </h2>
-        </div>
+        </div> -->
     </div>
 
 
