Add students details

--- a/dashboard/student details/student.html
+++ b/dashboard/student details/student.html
@@ -10,58 +10,18 @@
 </head>
 
 <body>
-    <div class="main_card">
         <div class="navbar">
             <h1 class="navbar_heading">Attendance Management System</h1><br>
             <h3>Students Details</h3>
-        </div>
-        <div class="card_main">
-            <div class="card">
-                <div class="img">
-                    <img src="/utils/images/2606572_5907-removebg-preview.png" alt="">
-                </div>
-
-                <div class="data">
-                    <div class="text">
-                        <div class="text_name">Name</div>
-                        <div class="text_data"> : Rehan Pasha</div>
-                    </div>
-
-                    <div class="text">
-                        <div class="text_name">Father Name</div>
-                        <div class="text_data"> : Wasim pasha</div>
-                    </div>
-
-                    <div class="text">
-                        <div class="text_name">Email</div>
-                        <div class="text_data"> : Rehan@gmail.com</div>
-                    </div>
-
-                    <div class="text">
-                        <div class="text_name">Password</div>
-                        <div class="text_data"> : ********</div>
-                    </div>
-
-
-
-                </div>
-
-
             </div>
 
-            <div class="card">
-                <div class="img">
-                    <img src="/utils/images/2606572_5907-removebg-preview.png" alt="">
-                </div>
+            <div id="contain"></div>
 
-                <div class="data">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis et praesentium
-                        repellendus veniam magnam perspiciatis sapiente perferendis</p>
-                </div>
-            </div>
 
-        </div>
-        <script src="./student.js" type="module"></script>
+
+
+
+            <script src="./student.js" type="module"></script>
 </body>
 
 </html>
