--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     <script src="./app.js" type="module"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
+
+<!-- THE EMAIL OF ADMIN Login ====> rehan@gmail.com -->
+<!-- THE PASSWORD IS 1234567 -->
+
 </body>
 
 
